update: solve dulicate booking
