# src/routes/routes.ts
@@ -95,6 +95,14 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "IQueryBooking": {
+        "dataType": "refObject",
+        "properties": {
+            "date": {"dataType":"datetime"},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "IBookingInfo": {
         "dataType": "refObject",
         "properties": {
@@ -614,6 +622,7 @@ export function RegisterRoutes(app: Router) {
 
             async function BookingController_GetAllBooking(request: ExRequest, response: ExResponse, next: any) {
             const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    queryparam: {"in":"queries","name":"queryparam","required":true,"ref":"IQueryBooking"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
